1.19-6.1.1:
- Fixed a problem with the exportpart command
- Fixed a problem with editmode. It didn't properly remember the editing data when reloading a world

1.19-6.1.0:
- Big optimization during worldgen. Most of the todo queues are now avoided
- Flattening/interpolation of the heightmap now goes to build limit
- New forceSaplingGrowth server config option to disable the expensive auto sapling grow
- New avoidStructures server config option to avoid generating Lost Cities in chunks that have structures. By default the following structures are avoided (besides villages): mansions, igloos, swamp huts, and temples
- Fixed a problem where sometimes you could have floating trees
- Greatly extended the palette that can be exported by the exportpart command. It now includes a lot of unicode characters as well

1.19-6.0.29:
- Fixed a crash with the new 'stuff' feature

1.19-6.0.28:
- New 'stuff' feature. Using this you can define various random small objects that can be generated through cities (both inside and outside buildings)
- City styles can now specify what type of stuff they want to generate. Stuff that is marked with the tag 'all' is always generated
- Fixed a bug where predefined cities and spheres wouldn't work at all

1.19-6.0.27:
- TqLxQuanZ fixed a problem where generation data wasn't properly saved which could cause generation errors if you exited the world and re-entered

1.19-6.0.26:
- Fixed a bug where switching worlds with different profiles would sometimes cause the old profile to be used

1.19-6.0.25:
- Optimization to make it so that buildings with tons of spawners, chests, and other tile entities will cause less lag on a server by spreading the load over multiple ticks. Use the 'todoQueueSize' server config to configure this. By default it is set to 20
- Fixed a bug where the POI todo wasn't persisted

1.19-6.0.24:
- TqLxQuanZ speed up world generation speed if the chunk is not a city

1.19-6.0.23: